<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_themed_gradient"
    tools:context=".activities.SignUpActivity">

    <Button
        android:id="@+id/sa_btn_signUp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/blue_themed_gradient"
        android:text="@string/btn_singUp_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sa_et_confirmPassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sa_et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/et_password_placeholder"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:paddingRight="8dp"
        android:paddingBottom="12dp"
        android:textColorHint="#4985AA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sa_et_username" />

    <EditText
        android:id="@+id/sa_et_confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/et_confirm_password_placeholder"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:paddingRight="8dp"
        android:paddingBottom="12dp"
        android:textColorHint="#4985AA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sa_et_password" />

    <EditText
        android:id="@+id/sa_et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:paddingRight="8dp"
        android:paddingBottom="12dp"
        android:textColorHint="#4985AA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sa_iv_appLogo" />

    <ImageView
        android:id="@+id/sa_iv_appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>